# cs244

./: .gitignore  LICENSE.md  README.md  detect_stream.c  topology.yaml
attacker/: .gitignore  CMakeLists.txt  topology.yaml
attacker/config/: 60-forwarding.conf  60-tun.netdev  60-tun.network  rules.v4
attacker/include/close-stream/: app.hpp
attacker/include/detect-ports/: app.hpp
attacker/include/hijack-stream/: app.hpp
attacker/include/tcp-interface/: tcp-interface.hpp
attacker/include/tcp-packet/: tcp-packet.hpp
attacker/include/tcp-raw/tcp-raw/: interface.hpp
attacker/include/test-out-of-window/: app.hpp
attacker/include/topology/: topology.hpp
attacker/src/close-stream/: configuration.cpp  main.cpp
attacker/src/detect-ports/: configuration.cpp  main.cpp
attacker/src/hijack-stream/: configuration.cpp  main.cpp
attacker/src/tcp-interface/: exceptions.cpp  interface.cpp
attacker/src/tcp-packet/: packet.cpp
attacker/src/tcp-raw/: exceptions.cpp  interface.cpp
attacker/src/tcp-raw/interface/: exceptions.cpp  interface.cpp
attacker/src/test-out-of-window/: configuration.cpp  main.cpp
attacker/src/topology/: topology.cpp
router/: 60-nat.conf  nf_conntrack.conf
router/config/: 60-nat.conf  rules.v4
server/: echo.py
server/config/: rules.v4
victim/: 51-external-route.yaml
